--- a/style.css
+++ b/style.css
@@ -65,3 +65,57 @@ body{
     cursor: pointer;
     display: none;
 }
+
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
+.inicio{
+    display: flex;
+    align-items: center;
+    padding: 0 9%;
+}
+
+.inicio-content {
+    max-width: 60rem;
+}
+.inicio-content h1 {
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+.inicio-content .text-animado{
+    position: relative;
+    width: 32.8rem;
+}
+
+.inicio-content .text-animado h3{
+   font-size: 3.2rem;
+    font-weight: 700;
+    color: transparent;
+    -webkit-text-stroke: .7px var(--main-color);
+}
+
+.btn-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 34.5rem;
+    height: 5rem;
+}
+
+.btn-box .btn{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: baseline;
+    width: 15rem;
+    height: 100%;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .8rem;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
